   * Descent into Darkness:
     * A Small Favor, part 1: used 24 hour ToD
   * Son of the Black Eye:
     * To the Harbor of Tirigaz: used 24 hour ToD
   * Under the Burning Suns
     * Subterranean Struggle: no longer possible to win by allowing allies to
       die
     * Across the Harsh Sands: the Black Hand oasis is no longer possible to
       enter without triggering the bandits
 * Graphics:
   * New Animations:
     * Goblin spearman run se
     * Merman fighter attack se
   * Terrain:
     * Tall encampment keep can now be placed next to the tent encampment keep
     * Forest/hill terrain combinations no longer appear black on the minimap
   * Default team color always applied last; fixes bug #18817
 * Language and i18n:
   * Made it so that all of the Hangul Syllables block is covered by the
      font-loading code.
   * Made it so that en_US translations are loaded if they exist (bug #18507)
   * Updated translations: British English, Czech, Dutch, Galician, Indonesian,
     Italian, Japanese, Korean, Latin, Lithuanian, Old English,
     Portuguese (Brazil), Russian, Slovak, Swedish
 * Lua API:
   * add function wesnoth.get_starting_location
   * The side metatable provides also the side number
     (like wesnoth.sides[i].side, which would be i)
   * add function wesnoth.debug
 * Terrain:
   * Oasis may be placed on any terrain, aliased to base
   * New terrain macro: MOUNTAIN_SINGLE_RANDOM
 * Unit changes and Balancing
   * All mounted units now have forest defines capped at 30%. This reduces their
     defense on forested hills from 40% to 30%
   * Forests now give best defense and worst movement on all terrain,
     not just hills - fixes bug #18216
   * Fixed some Khalifate unit animation glitches
 * User interface
   * Removed waypoints UI feature
   * Added an option to disable the "loading save from a different version"
     confirmation dialog
   * Line-wrap author names in the add-on description dialog (bug #18691)