@@ -12,6 +12,9 @@ Version 1.9.9+svn:
        die
      * Across the Harsh Sands: the Black Hand oasis is no longer possible to
        enter without triggering the bandits
+ * Editor:
+   * Made sure lighting setting changes are applied immediately when closing the
+     settings window when automatic map view updates are disabled
  * Graphics:
    * New Animations:
      * Goblin spearman run se
